[package]
name = "joined_towgether"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = ["vulkan", "no-slow-safety-checks"] }
anyhow = "1.0"
log = "0.4.14"
nalgebra = "0.19.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
